# rust-axum-api-example

./: .env  Cargo.toml  README.md  config.toml  diesel.toml
migrations/2024-11-10-201738_create_movies/: down.sql  up.sql
src/: main.rs  schema.rs
src/database/: database_connection.rs
src/models/: movie.rs
src/routers/: mod.rs  movie_router.rs
