[package]
name = "rust-axum-api-example"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
chrono =  { version = "0.4.38", features = ["serde"] }
env_logger = "0.11.5"
log = "0.4.22"
tokio = { version = "1.41.1", features = ["rt-multi-thread"] }
serde = { version = "1.0.104", features = ["derive"] }
